ingress_controller/sp-ingress.yaml
# save this in namespace of shinyproxy  -- default if no ns is specified
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shiny-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    ingress.kubernetes.io/affinity: "cookie" # need for sticky sessions see https://kubernetes.github.io/ingress-nginx/examples/affinity/cookie/
    ingress.kubernetes.io/session-cookie-name: "route" # need for sticky sessions
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    ingress.kubernetes.io/session-cookie-hash: "sha1" # need for sticky sessions
    nginx.ingress.kubernetes.io/session-cookie-name: "dt-sticky"
spec:
  tls:
  - hosts:
    - myDomain.com
    secretName: tls-secret-shiny
  rules:
  - host: myDomain.com
    http:
      paths:
      - backend:
          serviceName: shinyproxy
          servicePort: 443
        path: /
